--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,7 +37,7 @@
 	      <li class="{% block class_about %}inactive{% endblock %}"> <a href="#">About</a></li>
               <li><a href="http://facebook.com/groups/chennaigeeks" target="_blank">Join</a></li>
               <li><a href="http://kippt.com/makkarlabs/chennaigeeks" target="_blank">Bookmarks</a></li>
-              <li><a href="http://makkarlabs.in/chennaigeeks/blog">Blog</a></li>
+              <li><a href="http://chennaigeeks.in/blog">Blog</a></li>
               <li class="{% block class_search %}inactive{% endblock %}"><a href="{{url_for('search')}}">Search</a></li>
             </ul>
             </div>
