Removed wiki link and changed event page link on layout

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,8 +49,7 @@
               <li title="Join Facebook group"><a href="http://facebook.com/groups/chennaigeeks" target="_blank">Join</a></li>
               <li title="View Kippt bookmarks"><a href="http://kippt.com/makkarlabs/chennaigeeks" target="_blank">Bookmarks</a></li>
               <li><a href="http://chennaigeeks.in/blog">Blog</a></li>
-              <li><a href="http://chennaigeeks.in/wiki">Wiki</a></li>
-	      <li><a href="http://chennaigeeks.in/blog/category/events">Events</a></li>
+	          <li><a href="http://chennaigeeks.in/blog/events">Events</a></li>
             </ul>
 
 	
